[package]
name = "fluxgate-wasm"
version = "0.1.0"
edition = "2024"
authors = ["Fluxgate Contributors <opensource@example.com>"]
description = "Utilities for processing fluxgate magnetometer readings in WebAssembly contexts"
license = "Apache-2.0"
repository = "https://example.com/fluxgate-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["panic-hook"]
panic-hook = ["dep:console_error_panic_hook"]

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.117"
wasm-bindgen = { version = "0.2.93", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
thiserror = "1.0.63"

[dev-dependencies]
wasm-bindgen-test = "0.3.43"
