[package]
name = "fluxgate_wasm_core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Fluxgate WASM Maintainers <dev@fluxgate.local>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["yaml"]
yaml = ["serde_yaml"]

[dependencies]
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = { version = "0.9.34", optional = true }
bincode = "1.3.3"
thiserror = "1.0.61"
indexmap = { version = "2.2.6", features = ["serde"] }
js-sys = "0.3.69"

[dependencies.siphasher]
version = "0.3.11"
default-features = false

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
